--- a/css/style.css
+++ b/css/style.css
@@ -408,7 +408,7 @@ a:focus {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-image: url(../images/slider-bg.jpg);
+  background-image: url(../images/sgya_back.jpg);
   background-size: cover;
 }
 
