--- a/css/style.scss
+++ b/css/style.scss
@@ -750,7 +750,7 @@ a:focus {
 // client section
 
 .client_section {
-  background-image: url(../images/client-bg.jpg);
+  background-image: url(../images/sgya_back.jpg);
   background-size: cover;
   background-attachment: fixed;
 
