--- a/css/style.css
+++ b/css/style.css
@@ -786,7 +786,7 @@ a:focus {
 }
 
 .client_section {
-  background-image: url(../images/client-bg.jpg);
+  background-image: url(../images/sgya_back.jpg);
   background-size: cover;
   background-attachment: fixed;
 }
