--- a/css/style.css
+++ b/css/style.css
@@ -414,7 +414,7 @@ a:focus {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-image: url(../images/sgya_back.jpg);
+  background-image: url(../images/background.png);
   background-size: cover;
 }
 
@@ -786,7 +786,7 @@ a:focus {
 }
 
 .client_section {
-  background-image: url(../images/sgya_back.jpg);
+  background-image: url(../images/background.png);
   background-size: cover;
   background-attachment: fixed;
 }
