--- a/css/style.css
+++ b/css/style.css
@@ -1244,3 +1244,30 @@ a:focus {
   color: inherit;
 }
 /*# sourceMappingURL=style.css.map */
+
+#-------------------------------------------------------------
+
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  text-align: center; /* Align text to the center */
+}
+
+.image-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+img {
+  display: block;
+}
+
+.description {
+  margin-top: 10px;
+  font-size: 16px;
+}
